# rust_cli_basic_template

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
